# sls-example-app

./: .gitignore  package.json  pyproject.toml  serverless.yml
