[tool.poetry]
name = "holiday-service"
version = "0.1.0"
description = "Utility service to query for country specific holidays"
authors = ["ihoubr <ivo.houbrechts@nike.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.43"
aws-lambda-powertools = "^1.9.1"
pynamodb = "^5.0.0"
python-dateutil = "^2.8.1"
opentelemetry-api = "^0.17b0"
opentelemetry-propagator-b3 = "^0.17b0"
opentelemetry-sdk = "^0.17b0"
serverless-wsgi = "^1.7.6"
Flask = "^1.1.2"
connexion = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-mock = "^3.5.1"
locust = "^1.4.1"
pytest-dynamodb = "^2.0.1"
PyYAML = "^5.4.1"
pytest-cov = "^2.11.1"
matchlib = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
